


  This is list of recent PETSc changes before they are 
transported into the docs/changes.html file. (Because it
is a pain to always check that file out of SourceSafe to 
add to it).

  VEC

     

     

  MAT

    Added to additional arguments to MatCreate(MPI_Comm comm,int m,int n,int M,int N,Mat *)
    where m and n are the local ownership sizes. To get the effect of the old MatCreate()
    use m and n equal to PETSC_DECIDE
    

  KSP

    Added additional final argument to KSPSetMonitor() an optional destroy routine for the 
    monitor context.
    
    Added -ksp_gmres_krylov_monitor and KSPGMRESKrylovMonitor() to allow one to view the vectors
    in the Krylov space.
     
    
  PC

  

 
  AO

    

  IS

    
  Draw

    

    

  General

   Changed these routines to return an error code.
extern int   PetscStrchr(const char[],char,char **);
extern int   PetscStrrchr(const char[],char,char **);
extern int   PetscStrstr(const char[],const char[],char **);
extern int   PetscStrtok(const char[],const char[],char **);    

   

   
    

   


   

  Viewer

    

   

  SNES 

  Added SNESVecViewMonitorUpdate() and -snes_vecmonitor_update to display the Newton update at each iteration.    

  Added additional final argument to SNESSetMonitor() an optional destroy routine for the 
    monitor context.
    

  DA

    

  TS

   